--- a/VMS semestralka.ioc
+++ b/VMS semestralka.ioc
@@ -1,54 +1,52 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.IPParameters=Rank-8\#ChannelRegularConversion,master,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,SamplingTimeOPAMP-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,Offset-8\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Offset-8\#ChannelRegularConversion=0
+ADC1.OffsetNumber-8\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-8\#ChannelRegularConversion=1
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTimeOPAMP-8\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-I2C1.IPParameters=Timing-I2C,Timing
-I2C1.Timing=0x2000090E
-I2C1.Timing-I2C=0x2000090E
 KeepUserPlacement=false
 Mcu.CPN=STM32F303VCT6
 Mcu.Family=STM32F3
-Mcu.IP0=I2C1
+Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
+Mcu.IP3=SYS
+Mcu.IP4=TIM17
 Mcu.IP5=USB
 Mcu.IPNb=6
 Mcu.Name=STM32F303V(B-C)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE2
-Mcu.Pin1=PE3
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PE8
-Mcu.Pin13=PE9
-Mcu.Pin14=PE10
-Mcu.Pin15=PE11
-Mcu.Pin16=PE12
-Mcu.Pin17=PE13
-Mcu.Pin18=PE14
-Mcu.Pin19=PE15
-Mcu.Pin2=PE4
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PB3
-Mcu.Pin25=PB6
-Mcu.Pin26=PB7
-Mcu.Pin27=PE0
-Mcu.Pin28=PE1
-Mcu.Pin29=VP_SYS_VS_Systick
-Mcu.Pin3=PE5
-Mcu.Pin4=PC14-OSC32_IN
-Mcu.Pin5=PC15-OSC32_OUT
-Mcu.Pin6=PF0-OSC_IN
-Mcu.Pin7=PF1-OSC_OUT
-Mcu.Pin8=PA0
-Mcu.Pin9=PA5
-Mcu.PinsNb=30
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PE11
+Mcu.Pin11=PE12
+Mcu.Pin12=PE13
+Mcu.Pin13=PE14
+Mcu.Pin14=PE15
+Mcu.Pin15=PA11
+Mcu.Pin16=PA12
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB3
+Mcu.Pin2=PF0-OSC_IN
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin4=PA0
+Mcu.Pin5=PA1
+Mcu.Pin6=PA7
+Mcu.Pin7=PE8
+Mcu.Pin8=PE9
+Mcu.Pin9=PE10
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -69,6 +67,8 @@ PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=B1 [Blue PushButton]
 PA0.Locked=true
 PA0.Signal=GPIO_Input
+PA1.Mode=IN2-Single-Ended
+PA1.Signal=ADC1_IN2
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=DM
 PA11.Locked=true
@@ -89,37 +89,12 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=SPI1_SCK [L3GD20_SCL/SPC]
-PA5.Locked=true
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=SPI1_MISO [L3GD20_SA0/SDO]
-PA6.Locked=true
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=SPI1_MISO [L3GD20_SDA/SDI/SDO]
 PA7.Locked=true
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
+PA7.Signal=S_TIM17_CH1
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-TRACESWO
-PB6.GPIOParameters=GPIO_Label,GPIO_Pu
-PB6.GPIO_Label=I2C1_SCL [LSM303DLHC_SCL]
-PB6.GPIO_Pu=GPIO_PULLUP
-PB6.Locked=true
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.GPIOParameters=GPIO_Label,GPIO_Pu
-PB7.GPIO_Label=I2C1_SDA [LSM303DLHC_SDA]
-PB7.GPIO_Pu=GPIO_PULLUP
-PB7.Locked=true
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=OSC32_IN
 PC14-OSC32_IN.Locked=true
@@ -128,16 +103,6 @@ PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=OSC32_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PE0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE0.GPIO_Label=MEMS_INT1 [L3GD20_INT1]
-PE0.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE0.Locked=true
-PE0.Signal=GPXTI0
-PE1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE1.GPIO_Label=MEMS_INT2 [L3GD20_DRDY/INT2]
-PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE1.Locked=true
-PE1.Signal=GPXTI1
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=LD5 [Orange Led]
 PE10.Locked=true
@@ -162,25 +127,6 @@ PE15.GPIOParameters=GPIO_Label
 PE15.GPIO_Label=LD6 [Green Led]
 PE15.Locked=true
 PE15.Signal=GPIO_Output
-PE2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE2.GPIO_Label=DRDY [LSM303DLHC_DRDY]
-PE2.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE2.Locked=true
-PE2.Signal=GPXTI2
-PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=CS_I2C/SPI [L3GD20_CS_I2C/SPI]
-PE3.Locked=true
-PE3.Signal=GPIO_Output
-PE4.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE4.GPIO_Label=MEMS_INT3 [LSM303DLHC_INT1]
-PE4.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE4.Locked=true
-PE4.Signal=GPXTI4
-PE5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE5.GPIO_Label=MEMS_INT4 [LSM303DLHC_INT2]
-PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE5.Locked=true
-PE5.Signal=GPXTI5
 PE8.GPIOParameters=GPIO_Label
 PE8.GPIO_Label=LD4 [Blue Led]
 PE8.Locked=true
@@ -229,7 +175,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true
 RCC.ADC12outputFreq_Value=48000000
 RCC.ADC34outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
@@ -270,26 +216,13 @@ RCC.USART2Freq_Value=24000000
 RCC.USART3Freq_Value=24000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
-SH.GPXTI1.0=GPIO_EXTI1
-SH.GPXTI1.ConfNb=1
-SH.GPXTI2.0=GPIO_EXTI2
-SH.GPXTI2.ConfNb=1
-SH.GPXTI4.0=GPIO_EXTI4
-SH.GPXTI4.ConfNb=1
-SH.GPXTI5.0=GPIO_EXTI5
-SH.GPXTI5.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=12.0 MBits/s
-SPI1.CalculateBaudRate-Full_Duplex_Master=24.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=CalculateBaudRate,BaudRatePrescaler,CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
+SH.S_TIM17_CH1.0=TIM17_CH1,PWM Generation1 CH1
+SH.S_TIM17_CH1.ConfNb=1
+TIM17.Channel=TIM_CHANNEL_1
+TIM17.IPParameters=Channel
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 board=STM32F3DISCOVERY
 boardIOC=true
