--- a/VMS semestralka.ioc
+++ b/VMS semestralka.ioc
@@ -17,8 +17,8 @@ ADC3.Rank-0\#ChannelRegularConversion=1
 ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC3.SamplingTimeOPAMP-0\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
 ADC3.master=1
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Project naming
 CAD.provider=
 File.Version=6
 KeepUserPlacement=false
@@ -31,33 +31,32 @@ Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM17
 Mcu.IP6=USB
-Mcu.IPNb=7
+Mcu.IP7=USB_DEVICE
+Mcu.IPNb=8
 Mcu.Name=STM32F303V(B-C)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PC14-OSC32_IN
-Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PE10
-Mcu.Pin11=PE11
-Mcu.Pin12=PE12
-Mcu.Pin13=PE13
-Mcu.Pin14=PE14
-Mcu.Pin15=PE15
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
-Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=PB3
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM17_VS_ClockSourceINT
-Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin4=PA0
-Mcu.Pin5=PA1
-Mcu.Pin6=PA7
-Mcu.Pin7=PB1
-Mcu.Pin8=PE8
-Mcu.Pin9=PE9
-Mcu.PinsNb=23
+Mcu.Pin0=PF0-OSC_IN
+Mcu.Pin1=PA0
+Mcu.Pin10=PE13
+Mcu.Pin11=PE14
+Mcu.Pin12=PE15
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin2=PA1
+Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PA7
+Mcu.Pin4=PB1
+Mcu.Pin5=PE8
+Mcu.Pin6=PE9
+Mcu.Pin7=PE10
+Mcu.Pin8=PE11
+Mcu.Pin9=PE12
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -73,6 +72,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=B1 [Blue PushButton]
@@ -109,14 +109,6 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-TRACESWO
-PC14-OSC32_IN.GPIOParameters=GPIO_Label
-PC14-OSC32_IN.GPIO_Label=OSC32_IN
-PC14-OSC32_IN.Locked=true
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.GPIOParameters=GPIO_Label
-PC15-OSC32_OUT.GPIO_Label=OSC32_OUT
-PC15-OSC32_OUT.Locked=true
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=LD5 [Orange Led]
 PE10.Locked=true
@@ -154,10 +146,6 @@ PF0-OSC_IN.GPIO_Label=OSC_IN
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Clock-Source
 PF0-OSC_IN.Signal=RCC_OSC_IN
-PF1-OSC_OUT.GPIOParameters=GPIO_Label
-PF1-OSC_OUT.GPIO_Label=OSC_OUT
-PF1-OSC_OUT.Locked=true
-PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -189,7 +177,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_PCD_Init-USB-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_TIM17_Init-TIM17-false-HAL-true
 RCC.ADC12outputFreq_Value=48000000
 RCC.ADC34outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
@@ -203,12 +191,13 @@ RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
 RCC.HSEPLLFreq_Value=8000000
+RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2SClocksFreq_Value=48000000
-RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
 RCC.MCOFreq_Value=48000000
@@ -232,10 +221,18 @@ RCC.VCOOutput2Freq_Value=8000000
 SH.S_TIM17_CH1.0=TIM17_CH1,PWM Generation1 CH1
 SH.S_TIM17_CH1.ConfNb=1
 TIM17.Channel=TIM_CHANNEL_1
-TIM17.IPParameters=Channel
+TIM17.IPParameters=Channel,Prescaler,Period
+TIM17.Period=48
+TIM17.Prescaler=1000
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=STM32F3DISCOVERY
 boardIOC=true
