--- a/VMS semestralka/VMS semestralka.ioc
+++ b/VMS semestralka/VMS semestralka.ioc
@@ -72,6 +72,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
@@ -222,8 +223,8 @@ SH.S_TIM17_CH1.0=TIM17_CH1,PWM Generation1 CH1
 SH.S_TIM17_CH1.ConfNb=1
 TIM17.Channel=TIM_CHANNEL_1
 TIM17.IPParameters=Channel,Prescaler,Period
-TIM17.Period=48
-TIM17.Prescaler=1000
+TIM17.Period=100
+TIM17.Prescaler=48000
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
@@ -236,3 +237,4 @@ VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=STM32F3DISCOVERY
 boardIOC=true
+isbadioc=false
