--- a/VMS semestralka/VMS semestralka.ioc
+++ b/VMS semestralka/VMS semestralka.ioc
@@ -29,34 +29,39 @@ Mcu.IP1=ADC3
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=TIM17
-Mcu.IP6=USB
-Mcu.IP7=USB_DEVICE
-Mcu.IPNb=8
+Mcu.IP5=TIM2
+Mcu.IP6=TIM16
+Mcu.IP7=TIM17
+Mcu.IP8=USB
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=10
 Mcu.Name=STM32F303V(B-C)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PA0
-Mcu.Pin10=PE13
-Mcu.Pin11=PE14
-Mcu.Pin12=PE15
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin10=PE14
+Mcu.Pin11=PE15
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PD4
+Mcu.Pin17=PD6
+Mcu.Pin18=PB3
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PA1
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PA7
-Mcu.Pin4=PB1
-Mcu.Pin5=PE8
-Mcu.Pin6=PE9
-Mcu.Pin7=PE10
-Mcu.Pin8=PE11
-Mcu.Pin9=PE12
-Mcu.PinsNb=21
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PB1
+Mcu.Pin4=PE8
+Mcu.Pin5=PE9
+Mcu.Pin6=PE10
+Mcu.Pin7=PE11
+Mcu.Pin8=PE12
+Mcu.Pin9=PE13
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -72,6 +77,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
@@ -100,8 +107,6 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA7.Locked=true
-PA7.Signal=S_TIM17_CH1
 PB1.Locked=true
 PB1.Mode=IN1-Single-Ended
 PB1.Signal=ADC3_IN1
@@ -109,6 +114,10 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-TRACESWO
+PD4.Locked=true
+PD4.Signal=S_TIM2_CH2
+PD6.Locked=true
+PD6.Signal=S_TIM2_CH4
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=LD5 [Orange Led]
 PE10.Locked=true
@@ -177,7 +186,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC3_Init-ADC3-false-HAL-true,5-MX_TIM17_Init-TIM17-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC3_Init-ADC3-false-HAL-true,5-MX_TIM17_Init-TIM17-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_TIM16_Init-TIM16-false-HAL-true
 RCC.ADC12outputFreq_Value=48000000
 RCC.ADC34outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
@@ -218,20 +227,33 @@ RCC.USART2Freq_Value=24000000
 RCC.USART3Freq_Value=24000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.S_TIM17_CH1.0=TIM17_CH1,PWM Generation1 CH1
-SH.S_TIM17_CH1.ConfNb=1
-TIM17.Channel=TIM_CHANNEL_1
-TIM17.IPParameters=Channel,Prescaler,Period
-TIM17.Period=48
-TIM17.Prescaler=1000
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
+TIM16.IPParameters=Prescaler,Period
+TIM16.Period=1000
+TIM16.Prescaler=48000
+TIM17.IPParameters=Prescaler,Period
+TIM17.Period=1000
+TIM17.Prescaler=48000
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Prescaler,Period
+TIM2.Period=1000
+TIM2.Prescaler=48000
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=STM32F3DISCOVERY
