--- a/VMS semestralka/VMS semestralka.ioc
+++ b/VMS semestralka/VMS semestralka.ioc
@@ -22,6 +22,7 @@ CAD.formats=[]
 CAD.pinconfig=Project naming
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F303VCT6
 Mcu.Family=STM32F3
@@ -71,6 +72,7 @@ MxDb.Version=DB.6.0.91
 NVIC.ADC3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -84,10 +86,11 @@ NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA0.GPIOParameters=GPIO_Label
+PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0.GPIO_Label=B1 [Blue PushButton]
+PA0.GPIO_PuPd=GPIO_PULLDOWN
 PA0.Locked=true
-PA0.Signal=GPIO_Input
+PA0.Signal=GPXTI0
 PA1.Mode=IN2-Single-Ended
 PA1.Signal=ADC1_IN2
 PA11.GPIOParameters=GPIO_Label
@@ -230,6 +233,8 @@ RCC.USART2Freq_Value=24000000
 RCC.USART3Freq_Value=24000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
 SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
